# MoiMoiOS

./: CMakeLists.txt  Makefile  README.md  toolchain.cmake
.github/workflows/: cmake-multi-platform.yml
kernel/boot/: entry.asm  grub.cfg  linker.ld  multiboot_header.asm
kernel/core/: error.c  error.h  init.c  io.h  klog.c  klog.h  panic.c  panic.h  scheduler.h  trap.c  trap.h  trap_asm.S  types.h
kernel/services/chest/: chest_service.c  chest_service.h
kernel/services/io/: io_syscalls.c  io_syscalls.h
kernel/services/notification/: app_manager_service.c  notification_service.c
